# restaurant-go

./: .env.sample  .gitignore  Makefile  README.md  cmd.sh  manage.py  pyproject.toml  pytest.ini  requirements.txt  setup_mysql_dev.sql
.github/workflows/: test-ci.yml
.idx/: dev.nix
constants/: constant.py
dj_rest_auth/: serializers.py  views.py
dj_rest_auth/registration/: views.py
dj_rest_auth/tests/: test_api.py
foods/: admin.py  models.py  serializers.py  urls.py  views.py
orders/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
restaurant_go/: asgi.py  settings.py  test_settings.py  urls.py  wsgi.py
templates/: base.html  email.html  home.html  password_reset_confirm.html
templates/fragments/: email_verification_form.html
users/: admin.py  models.py  serializers.py  swagger_serializer.py  tests.py  urls.py  views.py
users/templates/users/: verify.html
utils/: auth.py  email_utils.py  exceptions.py  mails.py  redis_utils.py  response.py  serializers.py  utils.py
utils/tests/: test_exceptions.py  test_mails.py  test_response.py  test_utils.py
